update for supporting the node js 10 based agent

--- a/ubuntu/Dockerfile
+++ b/ubuntu/Dockerfile
@@ -53,6 +53,13 @@ RUN apt-get update && \
     \
     usermod -aG docker buildagent
 
+RUN apt-get update && \
+	apt-get install -y build-essential && \
+	curl -sL https://deb.nodesource.com/setup_10.x | bash - && \
+	apt-get install -y nodejs && \
+	apt-get install -y man && \
+	apt-get clean all
+
 # A better fix for TW-52939 Dockerfile build fails because of aufs
 VOLUME /var/lib/docker
 
